- Adding initial support for scroller views. - Ideally we would render our own scrollbars to avoid content   shifting in browsers when the scrollbar becomes visible.

--- a/developer/static/css/developer.css
+++ b/developer/static/css/developer.css
@@ -14,8 +14,6 @@
 }
 
 .main-content {
-    padding-bottom: 90px;
-    overflow: hidden;
     min-height: 500px;
 }
 
