--- a/static/css/techresidents.css
+++ b/static/css/techresidents.css
@@ -680,3 +680,9 @@ button.drop-button .caret {
     display: none;
 }
 
+.scroller {
+    overflow: hidden;
+}
+.scroller:hover {
+    overflow: auto;
+}
